--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello world <!DOCTYPE html>
     <html lang="en">
     <head>
         <meta charset="UTF-8">
@@ -16,8 +15,8 @@
         <title>Document</title>
     </head>
     <body>
-        
+        <h1>Hello world <!DOCTYPE html>
     </body>
-    </html></h1>
+    </html>
 </body>
 </html>
