--- a/Index.html
+++ b/Index.html
@@ -15,7 +15,8 @@
         <title>Document</title>
     </head>
     <body>
-        <h1>Hello world <!DOCTYPE html>
+        <h1>Hello World !!!</h1>
+        <h2>Git test</h2>
     </body>
     </html>
 </body>
