--- a/Index.html
+++ b/Index.html
@@ -17,6 +17,7 @@
     <body>
         <h1>Hello World !!!</h1>
         <h2>Git test</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, quam!</p>
     </body>
     </html>
 </body>
